# Voxel-Engine

./: CMakeLists.txt  imgui.ini  main.cpp
data/: block_data.json  world_data.json  world_data.txt
shaders/: grid.frag  grid.vert  grid_overlay.frag  grid_overlay.vert  light.vert  shader.frag  shader.vert  voxel.frag  voxel.vert
shaders/grid/: grid.frag  grid.vert
shaders/other/: voxel.vert
shaders/skybox/: skybox.frag  skybox.vert
src/: camera.cpp  camera.h  window.cpp  window.h
src/common/: constants.h
src/game/: chunk.cpp  chunk.h
src/game/data/: world_data.h
src/rendering/: buffer_object.cpp  buffer_object.h  ebo.cpp  ebo.h  grid_overlay.cpp  grid_overlay.h  shader.cpp  shader.h  skybox.cpp  skybox.h  vao.cpp  vao.h
src/rendering/gl/: cube_map.cpp  cube_map.h  cube_map_array.cpp  cube_map_array.h  texture.cpp  texture.h  texture_2d_array.cpp  texture_2d_array.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h
src/utilities/: assert.cpp  assert.h  debug.cpp  debug.h  types.h  util.cpp  util.h
